# File_System

./: CMakeLists.txt  FURGfs3  README.md  furgfs.img  main.c
include/: file_system.h  init_file_system.h
src/: fat_fs.c  init_file_system.c
